<resources>
    <!--    AndroidManifest-->
    <string name="app_name">ToDoList</string>
    <!--    activity_main.xml-->
    <string name="main_content_description_button">Clique aqui para criar uma tarefa</string>
    <string name="main_toolbar_title">Tarefas</string>
    <!--    activity_add_task.xml-->
    <string name="add_task_toolbar_title">Criar tarefa</string>
    <string name="add_task_text_input_layout_title_hint">Título</string>
    <string name="add_task_text_input_layout_description_hint">Descrição</string>
    <string name="add_task_text_input_layout_date_hint">Data</string>
    <string name="add_task_text_input_layout_hour_hint">Hora</string>
    <string name="add_task_button_title_cancel">Cancelar</string>
    <string name="add_task_button_text_new_task">Criar tarefa</string>
<!--    item_task.xml-->
    <string name="item_task_content_description_image">Toque aqui para editar a tarefa</string>
<!--    menu.xml-->
    <string name="menu_edit">Editar</string>
    <string name="menu_delete">Deletar</string>
<!--    empty_state.xml-->
    <string name="empty_state_text">Ops! Você não possui nenhuma tarefa</string>
</resources>